Build failing at React components

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,14 @@
+<!DOCTYPE html>
 <html>
-    <head></head>
+    <head>
+        <meta charset="utf-8" />
+        <title></title>
+    </head>
+
     <body>
-        <script src="../dist/index.js"></script>
+        <div class="well">
+            <h1>Sample app</h1>
+            <div id="root"></div>
+        </div>
     </body>
 </html>
