Add stylelint with jest runner, react HMR, webpack overhaul

--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
-        <meta charset="utf-8" />
-        <title></title>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+        <title>Webpack 4 - React From Scratch</title>
     </head>
 
     <body>
-        <div class="well">
-            <h1>Sample app</h1>
-            <div id="root"></div>
-        </div>
+        <h1>Hello, World!</h1>
+        <div id="root"></div>
     </body>
-    <script src="./bundle.js"></script>
 </html>
