Fixed test of js(x) files by adding transformation, updated empty mock config.

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Webpack 4 - React From Scratch</title>
+    <title>Typescript, React, Jest, Babel 7, Webpack 4, ESlint</title>
   </head>
 
   <body>
